--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "video.completeautomate",
+  "name": "test",
   "version": "1.0.0",
-  "description": "A React Three Fiber Project",
+  "description": "My Remotion video",
   "repository": {},
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@react-three/fiber": "9.2.0",
     "@remotion/cli": "4.0.398",
-    "@remotion/media": "4.0.398",
-    "@remotion/three": "4.0.398",
     "@remotion/zod-types": "4.0.398",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remotion": "4.0.398",
-    "three": "0.178.0",
     "zod": "3.22.3",
-    "mediabunny": "1.27.2"
+    "@remotion/tailwind-v4": "4.0.398",
+    "tailwindcss": "4.0.0"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.398",
     "@types/react": "19.2.7",
-    "@types/three": "0.170.0",
     "@types/web": "0.0.166",
     "eslint": "9.19.0",
     "prettier": "3.6.0",
@@ -32,5 +28,8 @@
     "build": "remotion bundle",
     "upgrade": "remotion upgrade",
     "lint": "eslint src && tsc"
-  }
+  },
+  "sideEffects": [
+    "*.css"
+  ]
 }
