--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@remotion/cli": "4.0.398",
-    "@remotion/zod-types": "4.0.398",
+    "@remotion/cli": "4.0.403",
+    "@remotion/zod-types": "4.0.403",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "remotion": "4.0.398",
+    "remotion": "4.0.403",
     "zod": "3.22.3",
-    "@remotion/tailwind-v4": "4.0.398",
-    "tailwindcss": "4.0.0"
+    "@remotion/tailwind-v4": "4.0.403",
+    "tailwindcss": "4.1.18"
   },
   "devDependencies": {
-    "@remotion/eslint-config-flat": "4.0.398",
+    "@remotion/eslint-config-flat": "4.0.403",
     "@types/react": "19.2.7",
-    "@types/web": "0.0.166",
-    "eslint": "9.19.0",
-    "prettier": "3.6.0",
+    "@types/web": "0.0.313",
+    "eslint": "9.39.2",
+    "prettier": "3.7.4",
     "typescript": "5.9.3"
   },
   "scripts": {
     "dev": "remotion studio",
     "build": "remotion bundle",
     "upgrade": "remotion upgrade",
-    "lint": "eslint src && tsc"
+    "lint": "eslint src && tsc",
+    "update": "ncu -u --timeout 300000"
   },
   "sideEffects": [
     "*.css"
